--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ flask = "^3.0.2"
 requests = "^2.31.0"
 numpy = "^1.26.4"
 scikit-learn = "^1.4.1.post1"
+treelib = "^1.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
 matplotlib = "^3.8.4"
+pandas = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core"]
